# SENG402

./: README.md  diff.py  local-testnet.json
DiffPrivacyDirectory/backend/: Cargo.toml  Makefile  NOTICE  README.md
DiffPrivacyDirectory/backend/src/: contract.rs  lib.rs  msg.rs  random.rs  state.rs
DiffPrivacyDirectory/deployer/: .editorconfig  .eslintrc.js  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
DiffPrivacyDirectory/deployer/src/: index.ts
DiffPrivacyDirectory/diffprivacy-app/: .env  .env-local  README.md  package-lock.json  package.json
DiffPrivacyDirectory/diffprivacy-app/src/: accounts.ts
DiffPrivacyDirectory/diffprivacy-app/src/components/: App.tsx  Main.tsx  Start.tsx
DiffPrivacyDirectory/diffprivacy-app/src/types/: Start.d.ts
Rust-learning/: let1  let1.rs
SecretJS-Template/: package-lock.json  package.json
SecretNetwork/Sylo-address-book/: package-lock.json  package.json
SecretNetwork/Sylo-address-book/src/: App.css  index.tsx  main.ts
SecretNetwork/Sylo-address-book/src/components/: App.tsx  Main.tsx  Start.tsx
SecretNetwork/backend/src/: contract.rs  msg.rs  state.rs
SecretNetwork/diff-privacy/: package-lock.json  package.json  webpack.config.js
SecretNetwork/diff-privacy/src/: App.js  helpers.js  index.js
SecretNetwork/diffprivacy/: NOTICE
SecretNetwork/diffprivacy-app/src/components/: Main.tsx  Start.tsx  StartCopy.js
SecretNetwork/fixedpoint/: Cargo.toml
SecretNetwork/fixedpoint/src/: contract.rs  msg.rs  random.rs  state.rs
SecretNetwork/frontend/: main.js
SecretNetwork/frontend-contracts/: .env  app.js  helpers.js  package-lock.json  package.json
SecretNetwork/mysimplecounter/: Cargo.toml
SecretNetwork/mysimplecounter/src/: contract.rs  lib.rs  msg.rs  practice.rs  state.rs
SecretNetwork/secret-dapp/: package-lock.json  package.json
