[package]
name = "secret_contract_example"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
bincode2 = "2.0.1"
# smartnoise_validator = { version = "0.2.3" }
# smartnoise_runtime  = { version = "0.2.3" }
secret-toolkit = "0.2.0" # Uncomment this for extra tools
# secret-toolkit = { version = "0.4", default-features = false, features = ["utils", "storage", "serialization"] }
base64 = "0.12.3"
hex = "0.4.2"
primitive-types = { version = "0.9.0", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }
# secp256k1 = "0.24.0"
rand = "0.7.3"

[dev-dependencies]
cosmwasm-schema = "0.10.1"
